[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/PositionEditor.gd" type="Script" id=1]
[ext_resource path="res://Theme/ThinLineEdit.tres" type="Theme" id=2]

[node name="PositionEditor" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer1" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 14.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="HBoxContainer1"]
margin_right = 7.0
margin_bottom = 14.0
text = "x"

[node name="LineEditX" type="LineEdit" parent="HBoxContainer1"]
margin_left = 7.0
margin_right = 75.0
margin_bottom = 14.0
theme = ExtResource( 2 )
custom_constants/minimum_spaces = 13
placeholder_text = "x"
caret_blink = true

[node name="Label2" type="Label" parent="HBoxContainer1"]
margin_left = 75.0
margin_right = 82.0
margin_bottom = 14.0
text = "y"

[node name="LineEditY" type="LineEdit" parent="HBoxContainer1"]
margin_left = 82.0
margin_right = 150.0
margin_bottom = 14.0
theme = ExtResource( 2 )
custom_constants/minimum_spaces = 13
placeholder_text = "y"
caret_blink = true

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 32.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer2"]
margin_right = 7.0
margin_bottom = 14.0
text = "z"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEditZ" type="LineEdit" parent="HBoxContainer2"]
margin_left = 7.0
margin_right = 75.0
margin_bottom = 14.0
theme = ExtResource( 2 )
custom_constants/minimum_spaces = 13
placeholder_text = "z"
caret_blink = true

[connection signal="focus_exited" from="HBoxContainer1/LineEditX" to="." method="_on_LineEditX_focus_exited"]
[connection signal="text_entered" from="HBoxContainer1/LineEditX" to="." method="_on_LineEditX_text_entered"]
[connection signal="focus_exited" from="HBoxContainer1/LineEditY" to="." method="_on_LineEditY_focus_exited"]
[connection signal="text_entered" from="HBoxContainer1/LineEditY" to="." method="_on_LineEditY_text_entered"]
[connection signal="focus_exited" from="HBoxContainer2/LineEditZ" to="." method="_on_LineEditZ_focus_exited"]
[connection signal="text_entered" from="HBoxContainer2/LineEditZ" to="." method="_on_LineEditZ_text_entered"]
